{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 289,
  "lineage": "673c2ccb-9530-f75b-6cf4-8ded31429c8a",
  "resources": [
    {
      "module": "module.vpc_one_nacl",
      "mode": "data",
      "type": "aws_vpc",
      "name": "this_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117865246796:vpc/vpc-05c5169507abbd344",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01c0c3a7fbb6cde7c",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-d3fccfab",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05c5169507abbd344",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0964edb5887fc7924",
            "owner_id": "117865246796",
            "state": "available",
            "tags": {
              "Name": "salmoncow-test-us-east-1",
              "deployment": "terraform",
              "owner": "salmoncow"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "nacl_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-01d90fa0df9670daa",
            "egress": [],
            "id": "acl-01d90fa0df9670daa",
            "ingress": [],
            "owner_id": "117865246796",
            "subnet_ids": null,
            "tags": {
              "Name": "salmoncow-test-default-nacl",
              "deployment": "terraform",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0964edb5887fc7924",
            "id": "rtb-0964edb5887fc7924",
            "owner_id": "117865246796",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "salmoncow-test-default-rt",
              "deployment": "terraform",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "each": "map",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.0.0/16",
          "schema_version": 0,
          "attributes": {
            "id": "igw-0596eb2c6351576f0",
            "owner_id": "117865246796",
            "tags": {
              "Name": "salmoncow-test-igw",
              "deployment": "terraform",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "map",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc_one_nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0de81ef8bcac57671",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "117865246796",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-01e53ca1cf0fa9516",
              "subnet-0bc4462da0b37e215"
            ],
            "tags": {
              "Name": "salmoncow-test-private-nacl",
              "deployment": "terraform",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_subnet.private_subnet",
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one_nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [],
            "id": "acl-05dd9e802dbbc5924",
            "ingress": [],
            "owner_id": "117865246796",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-06e89ba6d3f6b184b",
              "subnet-08974e25e072c15d1"
            ],
            "tags": {
              "Name": "salmoncow-test-public-nacl",
              "deployment": "terraform",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_subnet.public_subnet",
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one_nacl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_100",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4085854036",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0de81ef8bcac57671",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "dependencies": [
            "module.vpc_one.aws_subnet.private_subnet",
            "module.vpc_one.aws_vpc.vpc",
            "module.vpc_one_nacl.aws_network_acl.nacl_private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one_nacl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_110",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-773846737",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0de81ef8bcac57671",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "dependencies": [
            "module.vpc_one.aws_subnet.private_subnet",
            "module.vpc_one.aws_vpc.vpc",
            "module.vpc_one_nacl.aws_network_acl.nacl_private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one_nacl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_100",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3676668467",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0de81ef8bcac57671",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "dependencies": [
            "module.vpc_one.aws_subnet.private_subnet",
            "module.vpc_one.aws_vpc.vpc",
            "module.vpc_one_nacl.aws_network_acl.nacl_private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one_nacl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_110",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1082183260",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0de81ef8bcac57671",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "dependencies": [
            "module.vpc_one.aws_subnet.private_subnet",
            "module.vpc_one.aws_vpc.vpc",
            "module.vpc_one_nacl.aws_network_acl.nacl_private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_igw",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.0.0/16",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0596eb2c6351576f0",
            "id": "r-rtb-067e0cd24207365081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-067e0cd2420736508",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_one.aws_internet_gateway.igw",
            "module.vpc_one.aws_route_table.public_rt",
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_natgw",
      "each": "map",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.0.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-072bc8c58943ab84e",
            "owner_id": "117865246796",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "salmoncow-test-us-east-1a-private-rt",
              "deployment": "terraform",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c63fae9217a97584",
            "owner_id": "117865246796",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "salmoncow-test-us-east-1b-private-rt",
              "deployment": "terraform",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.0.0/16",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-067e0cd2420736508",
            "owner_id": "117865246796",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0596eb2c6351576f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "salmoncow-test-us-east-1-public-rt",
              "deployment": "terraform",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.0.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9b5285c31236ac5",
            "route_table_id": "rtb-072bc8c58943ab84e",
            "subnet_id": "subnet-0bc4462da0b37e215"
          },
          "dependencies": [
            "module.vpc_one.aws_route_table.private_rt",
            "module.vpc_one.aws_subnet.private_subnet",
            "module.vpc_one.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0769930912659c0e9",
            "route_table_id": "rtb-0c63fae9217a97584",
            "subnet_id": "subnet-01e53ca1cf0fa9516"
          },
          "dependencies": [
            "module.vpc_one.aws_route_table.private_rt",
            "module.vpc_one.aws_subnet.private_subnet",
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f59bd66b6069863",
            "route_table_id": "rtb-067e0cd2420736508",
            "subnet_id": "subnet-08974e25e072c15d1"
          },
          "dependencies": [
            "module.vpc_one.aws_route_table.public_rt",
            "module.vpc_one.aws_subnet.public_subnet",
            "module.vpc_one.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0663899078ac2d813",
            "route_table_id": "rtb-067e0cd2420736508",
            "subnet_id": "subnet-06e89ba6d3f6b184b"
          },
          "dependencies": [
            "module.vpc_one.aws_route_table.public_rt",
            "module.vpc_one.aws_subnet.public_subnet",
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal_subnet",
      "each": "map",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.0.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117865246796:subnet/subnet-0bc4462da0b37e215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0bc4462da0b37e215",
            "map_public_ip_on_launch": false,
            "owner_id": "117865246796",
            "tags": {
              "Name": "salmoncow-test-us-east-1a-private-subnet",
              "deployment": "terraform",
              "network": "private",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117865246796:subnet/subnet-01e53ca1cf0fa9516",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01e53ca1cf0fa9516",
            "map_public_ip_on_launch": false,
            "owner_id": "117865246796",
            "tags": {
              "Name": "salmoncow-test-us-east-1b-private-subnet",
              "deployment": "terraform",
              "network": "private",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117865246796:subnet/subnet-08974e25e072c15d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08974e25e072c15d1",
            "map_public_ip_on_launch": false,
            "owner_id": "117865246796",
            "tags": {
              "Name": "salmoncow-test-us-east-1a-public-subnet",
              "deployment": "terraform",
              "network": "public",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117865246796:subnet/subnet-06e89ba6d3f6b184b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06e89ba6d3f6b184b",
            "map_public_ip_on_launch": false,
            "owner_id": "117865246796",
            "tags": {
              "Name": "salmoncow-test-us-east-1b-public-subnet",
              "deployment": "terraform",
              "network": "public",
              "owner": "salmoncow"
            },
            "vpc_id": "vpc-05c5169507abbd344"
          },
          "dependencies": [
            "module.vpc_one.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_one",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117865246796:vpc/vpc-05c5169507abbd344",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d90fa0df9670daa",
            "default_route_table_id": "rtb-0964edb5887fc7924",
            "default_security_group_id": "sg-0510a794bfba6fc4c",
            "dhcp_options_id": "dopt-d3fccfab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05c5169507abbd344",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0964edb5887fc7924",
            "owner_id": "117865246796",
            "tags": {
              "Name": "salmoncow-test-us-east-1",
              "deployment": "terraform",
              "owner": "salmoncow"
            }
          }
        }
      ]
    }
  ]
}